refactor(backend): implement architectural refinements and code quality improvements
- HATEOAS: Standardize entire API with HAL resources and assemblers for Meals and Notifications modules
- Refactoring: Extract business logic from controllers into new services: RecipeFeedbackService, NutritionEntryService, and NutrientService
- Refactoring: Extract MealPlanExportService to reduce MealPlanService's excessive dependencies
- Style: Resolve FQDN violations in controllers and services by adding proper imports
- Quality: Add missing class-level annotations (@Slf4j, @Validated, @Transactional, @ResponseStatus) across the backend
- Adapters: Convert RecipeAdapter and UserProfileAdapter to instance-based components for dependency injection consistency
- Preferences: Implement UserPreferenceAdapter and centralize conversion logic
- Performance: Optimize SettingsService with batch writes (saveAll) for age group recalculations
- Bugfix: Map AuthenticationException to 401 status and resolve transactional contradiction in NotificationService
- Technical: Remove unused adapter dependencies and ensure consistent error handling in ImageController
- Frontend: Update api.tsx to correctly handle standardized HATEOAS responses for Meals and Notifications